# udemy_study_compilation

./: .gitignore  README.md  pyproject.toml
algo_books/pt04/: 003.py  004-1.py  004-2.py  004-4.py  005.py  007.py  008.py  009.py  014.py  016.py  017_alt.py  021.py  022.py  test.py
algo_books/pt05/: 001-alt.py  001.py  002-alt.py  003.py  004-alt.py  004.py  006.py  007-alt2.py  007.py  008.py  009-alt.py  009.py  010-case  010.py  011.py  bisect_usage.py
algorithm_basic/05_array/: dutch_natl_flag.py
algorithm_basic/06_linked_lists/: 01_node.py  02_doubly_linked_list.py  05_reversed_linked_list.py
algorithm_basic/09_stack/: 01_implementation_by_list.py
algorithm_basic/10_queue/: 02_max_in_a_stack.py
algorithm_basic/14_AVL_trees/: avl.py
algorithm_dp/03_linear_search/: 01_linear_iteration.py  README.md
algorithm_dp/04_recursion/: 04_fibonacci_head.py  05_fibonacci_tail.py  06_towers_of_hanoi_recursion.py  07_fibonacci_iteration.py
algorithm_dp/05_selection_algorithms/: 02_quicksort_desc.py  03_median_of_medians.py  README.md
algorithm_dp/06_bit_manipulation/: 02-1_recursive_russian_peasant_multiplication.py  02_russian_peasant_multiplication.py  README.md
algorithm_dp/07_backtracking/: 01_n_queen.py  04_kinghts_tour.py  05_maze_bfs.py
postgres/01/: README.md
postgres/02/: README.md
postgres/03/: README.md
postgres/04/: README.md  test.sql
postgres/05/: README.md
postgres/06/: README.md  test.sql
postgres/07/: README.md
postgres/08/: README.md
postgres/09/: README.md
redis/01/: README.md
redis/02/: Basic_Strings_-_Completed.json  (+1 more)
(+140 files in other folders)
